--- a/Voting.WebApp/Web.config
+++ b/Voting.WebApp/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Voting.WebApp-20170819075650.mdf;Initial Catalog=aspnet-Voting.WebApp-20170819075650;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Voting.WebApp-20170819075650.mdf;Initial Catalog=aspnet-Voting.WebApp-20170819075650;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="EfDbContext" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Initial Catalog=Voting;Persist Security Info=True;User ID=sa;Password=sa;MultipleActiveResultSets=True" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
